NULL = 

SUBDIRS = reference

EXTRA_DIST = \
	architecture.txt \
	dnd.txt \
	load-states.dia \
	nautilus-internals.sxw \
	nautilus-internals.pdf \
	nautilus-io.txt \
	nautilus.faq \
	recommended-books.html \
	smoketests.html \
	state-machines.txt \
	style-guide.html \
	key_mouse_navigation.txt \
	$(NULL)
