NULL=

SUBDIRS =\
	crux_eggplant \
	crux_teal \
	default \
	gnome \
	sidebar_tab_pieces \
	sierra \
	tahoe \
	throbber \
	$(NULL)

icondir = $(datadir)/pixmaps/nautilus

icon_DATA =\
	Back.png \
	Forward.png \
	Home.png \
	Refresh.png \
	Search.png \
	Stop.png \
	Up.png \
	audio.png \
	backgrounds.png \
	chit_frame.png \
	colors.png \
	decrement.png \
	emblems.png \
	increment.png \
	knob.png \
	nautilus-mini-logo.png \
	note-indicator.png \
	number_strip.png \
	side_bar_image.png \
	text-selection-frame.png \
	thumbnail_frame.png \
	zoom_body.png \
	$(NULL)

EXTRA_DIST = $(icon_DATA)
