NULL=

SUBDIRS =\
	crux_eggplant \
	crux_teal \
	default \
	gnome \
	sierra \
	tahoe \
	throbber \
	$(NULL)

icondir = $(datadir)/pixmaps/nautilus

icon_DATA =\
	Search.png \
	audio.png \
	backgrounds.png \
	chit_frame.png \
	colors.png \
	decrement.png \
	emblems.png \
	increment.png \
	knob.png \
	nautilus-launch-icon.png \
	nautilus-mini-logo.png \
	note-indicator.png \
	number_strip.png \
	side_bar_image.png \
	text-selection-frame.png \
	thumbnail_frame.png \
	zoom_body.png \
	erase.png \
	$(NULL)

EXTRA_DIST = $(icon_DATA)
