NULL=

icondir = $(datadir)/pixmaps/nautilus

icon_DATA =\
	audio.svg \
	backgrounds.png \
	chit_frame.png \
	colors.png \
	emblems.png \
	erase.png \
	knob.png \
	nautilus-launch-icon.png \
	note-indicator.png \
	text-selection-frame.png \
	thumbnail_frame.png \
	$(NULL)

EXTRA_DIST = $(icon_DATA)
